# Payload-ArduCAM-UI

./: README.md
Camera-Debug-App/: CMakeLists.txt
Camera-Firmware/camera-firmware/: camera-firmware.ino
Camera-UI/: ArducamController.cpp  ArducamController.h  CMakeLists.txt  Main.qml  frameprovider.h  main.cpp
Rolling-Shutter-Test-Suite/: CMakeLists.txt
rolling-shutter-prelim/: test_log.txt
rolling-shutter-prelim-2/: README.md  test_log.txt
rolling-shutter-prelim/LED_cycle.ino/: LED_cycle.ino.ino
